add select item. could decode data from file or pipe.

--- a/src/host/gprsdecode/Makefile
+++ b/src/host/gprsdecode/Makefile
@@ -7,9 +7,9 @@ clean:
 
 check: default
 	@echo test CS2
-	@./gprsdecode gprs_262_80_0001_0000_20110710_2251_875_494777_0f.sample > cs2.dat
+	@./gprsdecode -f gprs_262_80_0001_0000_20110710_2251_875_494777_0f.sample > cs2.dat
 	@diff gprs_262_80_0001_0000_20110710_2251_875_494777_0f.decoded cs2.dat
 	@echo test CS3
-	@./gprsdecode gprs_20160129_1744_878_16846_0c.sample > cs3.dat
+	@./gprsdecode -f gprs_20160129_1744_878_16846_0c.sample > cs3.dat
 	@diff gprs_20160129_1744_878_16846_0c.decoded cs3.dat
 
